[package]
name = "filecoin-proofs-api"
version = "12.0.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bellperson = { version = "0.24", default-features = false }
bincode = "1.1.2"
blstrs = "0.6.0"
lazy_static = "1.2"
serde = "1.0.104"
filecoin-proofs-v1 = { package = "filecoin-proofs", path = "../rust-fil-proofs-private/filecoin-proofs", default-features = false }
filecoin-hashers = { path = "../rust-fil-proofs-private/filecoin-hashers", default-features = false, features = ["poseidon", "sha256"] }
fr32 = { path = "../rust-fil-proofs-private/fr32", default-features = false }
storage-proofs-core = { path = "../rust-fil-proofs-private/storage-proofs-core", default-features = false }
storage-proofs-porep = { path = "../rust-fil-proofs-private/storage-proofs-porep", default-features = false }

[features]
default = ["opencl"]
cuda = ["filecoin-proofs-v1/cuda", "filecoin-hashers/cuda", "storage-proofs-core/cuda", "storage-proofs-porep/cuda", "bellperson/cuda"]
opencl = ["filecoin-proofs-v1/opencl", "filecoin-hashers/opencl", "storage-proofs-core/opencl", "storage-proofs-porep/opencl", "bellperson/opencl"]
multicore-sdr = ["storage-proofs-porep/multicore-sdr"]
